Fixed logout, and added some db info on respective pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,19 @@ main{
 }
 .page-content{
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: center;
 	justify-content: center;
+}
+
+.flex100{
+	flex-basis: 100%;
+}
+
+.width100{
+	width: 100%;
 }
 
 /*----------------*/
