--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,8 +29,35 @@ main{
 }
 .page-content{
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: center;
 	justify-content: center;
 }
+
+.flex100{
+	flex-basis: 100%;
+}
+
+.width100{
+	width: 100%;
+}
+
+.tableRow{
+	display: flex;
+	justify-content: space-around;
+}
+
+.tableHead{
+	border-bottom: 1px solid gray;
+	margin-bottom: 0.5rem;
+	font-weight: 600;
+}
+
+/*.signInNav{
+	border-left: 1px solid #fff;
+}*/
 
 /*----------------*/
 
