--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,12 @@ main{
 	align-items: center;
 }
 .flex-item {
-	
+
+}
+
+.mdl-button {
+   min-width: inherit;
+   
 }
 /*.signInNav{
 	border-left: 1px solid #fff;
