--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,15 @@
 /*----BASIC STUFF----*/
 
+body{
+	font-family: 'Roboto', 'sans-serif';
+}
+
 footer{
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: ;
 	box-sizing: border-box;
+	z-index: 150;
 }
 
 #notifyUser{
@@ -73,10 +77,12 @@ main{
 
 .flex-container {
 	display: flex;
-	flex-direction: row;
-	/*align-items: center;*/
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 	justify-content: space-around;
+	/*align-content: space-around;*/
+	box-sizing: border-box;
+	margin:  0;
+	width: 100%;
 }
 .flex-item {
 
@@ -118,11 +124,15 @@ main{
 
 .profileDiv{
 	position: relative;
+	width:  25%;
 }
-
+.slim-container{
+	width:  25%;
+}
 .square100{
 	height: 100px;
 	width: 100px;
+	width:  50%;
 }
 
 .relative{
@@ -136,9 +146,35 @@ main{
 
 }
 
+.alertBox{
+	width: 100%;
+	border-radius: 0.2em;
+	box-sizing: border-box;
+	padding: 0;
+	margin:  1em 0 1em 0;
+	
+}
 
+.alertRed{
+	color: #000;
+	font-weight: 700;
+	border: 1px solid #F44336;
+	background-color: rgba(211, 47, 47, 0.2) ;
+}
 
+.alertGreen{
+	color: #000;
+	font-weight: 700;
+	border: 1px solid #8BC34A;
+	background-color: rgba(156, 204, 101, 0.2) ;
+}
 
+.alertYellow{
+	color: #000;
+	font-weight: 700;
+	border: 1px solid #FFB300;
+	background-color: rgba(255, 193, 7, 0.2) ;
+}
 /*----------------*/
 
 
