--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,20 +184,21 @@ main{
 	list-style-type: none;
 }
 
-.demo-card-square.mdl-card {
+.demo-card-square.mdl-card.postIt {
   width: auto;
   height: auto;
 }
-.demo-card-square > .mdl-card__title {
+.demo-card-square.postIt > .mdl-card__title.postIt {
   color: #757575;
   background-color: RGB(241, 210, 130);
 }
 
-.mdl-card__supporting-text {
+.mdl-card__supporting-text.postIt {
 	background-color: RGBA(241, 210, 130, 0.75);
+	width: 100%;
 }
 
-.mdl-card__actions {
+.mdl-card__actions.postIt {
 	
 	background-color: RGBA(241, 210, 130, 0.75);
 }
@@ -205,6 +206,10 @@ main{
 .bulletColor {
 	color: #757575;
 	
+}
+
+.mdl-grid {	
+	width: 100%;
 }
 /*----------------*/
 
