fixed styling on booking form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,19 +188,44 @@ main{
 	background-color: rgba(255, 193, 7, 0.2) ;
 }
 
-.formPadding{
-	padding: 1em;
-	box-sizing: border-box;
-
-
-}
-
 .marginTop1{
 	margin-top: 1em;
 }
 
 .marginBottom1{
 	margin-bottom: 1em;
+}
+
+.formPadding{
+	padding: 1em;
+	box-sizing: border-box;
+
+}
+
+.bookingsForm{
+	display: flex;
+	flex-flow: row wrap;
+	width: 100%;
+	flex-basis: 100%;
+}
+
+.formGroupParent{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+
+	width: 100%;
+	flex-basis: 100%;
+
+}
+.formGroup{
+
+	width: 45%;
+	flex-basis: 45%;
+	align-self: flex-start;
+}
+.formGroup input{
+	width: 100%;
 }
 /*----------------*/
 
