--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,6 +270,14 @@ main{
 	width: 100%;
 	margin-bottom: 0.2em;
 }
+
+.activeTab{
+	background-color: rgba(0,0,0,0.1);
+	/*color: rgb(255,152,0) !important;*/
+}
+.activeTab.adminTab{
+	color: #fff !important;
+}
 /*----------------*/
 
 
