--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,6 +315,21 @@ main{
 	flex-basis: 50%;
 }
 
+.pagination{
+	width: 100%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 0;
+}
+
+.contentWrapper{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
 /*select{
 	border: 0;
 	background-color: transparent;
