--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,8 +148,12 @@ main{
 	position: absolute;
 	bottom: -1.7em;
 	right:  0.3em;
-
 }
+
+.equipmentAdd{
+	bottom: 0.4em;
+}
+
 @media only screen and (max-width: 600px) {
 	.addBtn {
 		position: fixed;
