--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,11 @@ main{
 	margin-left:  1em;
 }
 
+.marginB{
+	margin-bottom: 1em;
+}
+
+
 .a_no_underline{
 	text-decoration: none;
 }
@@ -147,7 +152,7 @@ main{
 .knappis{
 	position: absolute;
 	bottom: -1.7em;
-	right:  0.3em;
+	right:  -4.3em;
 }
 
 .equipmentAdd{
