--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,6 +410,10 @@ main{
 	height: 40px
 }
 */
+
+.signOutNav{
+	margin-left: 2em;
+}
 @media only screen and (max-width: 600px) {
 	.roomPrivacyBox{
 		width: 100%;
