Nav admin color change for better readability

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,7 +303,7 @@ main{
 }
 
 .adminNavColor{
-	background-color: rgb(255,152,0) !important;
+	background-color: rgb(85, 41, 136) !important;
 }
 
 .roomPrivacyBox{
